<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.adbreceiver.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ConcurrencyLabFragment"
            app:destination="@id/ConcurrencyLabFragment" />
    </fragment>

    <!-- Schermata didattica, indipendente dal flusso principale dell'app. -->
    <fragment
        android:id="@+id/ConcurrencyLabFragment"
        android:name="com.example.adbreceiver.lab.ConcurrencyLabFragment"
        android:label="@string/concurrency_lab_label"
        tools:layout="@layout/fragment_concurrency_lab">

        <action
            android:id="@+id/action_ConcurrencyLabFragment_to_FlowDemoFragment"
            app:destination="@id/FlowDemoFragment" />
    </fragment>

    <fragment
        android:id="@+id/FlowDemoFragment"
        android:name="com.example.adbreceiver.lab.FlowDemoFragment"
        android:label="@string/flow_demo_label"
        tools:layout="@layout/fragment_flow_demo" />
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.adbreceiver.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>